--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,16 @@ prost = "0.12"
 log = "0.4.21"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
 chrono = "0.4"
+rand = "0.8.5"
+ctrlc = "3.4.4"
 
 [build-dependencies]
 tonic-build = "0.11"
 
 [[bin]]
 name = "server"
-path = "src/server.rs"
+path = "src/server/main.rs"
 
 [[bin]]
 name = "client"
-path = "src/client.rs"
+path = "src/client/main.rs"
