--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ log = "0.4.21"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
 chrono = "0.4"
 rand = "0.8.5"
-ctrlc = "3.4.4"
+colored = "2"
 
 [build-dependencies]
 tonic-build = "0.11"
