--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
 chrono = "0.4"
 rand = "0.8.5"
 colored = "2"
+anyhow = "1.0"
 clap = { version = "4.5.0", features = ["derive"] }
 
 [build-dependencies]
